[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/assult_rifle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DroppedWeapon.gd" type="Script" id=2]
[ext_resource path="res://Assets/hand_gun_wHands.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 68.1175

[sub_resource type="CircleShape2D" id=1]
radius = 74.0068

[node name="DroppedWeapon" type="Area2D" groups=["DroppedWeapon"]]
collision_layer = 64
collision_mask = 2
script = ExtResource( 2 )

[node name="AssultRifleShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="AssultRifle" type="Sprite" parent="AssultRifleShape"]
position = Vector2( -30, 12 )
texture = ExtResource( 1 )

[node name="PistolShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Pistol" type="Sprite" parent="PistolShape"]
position = Vector2( -72, -9 )
texture = ExtResource( 3 )
